<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/playing_card_width"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/cardview_dark_background">

    <ImageView
        android:id="@+id/dealCardsUi_deck_icon"
        style="@style/DealCardsUi.Card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_android"
        android:textSize="28sp" />


</android.support.v7.widget.CardView>